--- a/bin/centralized-logging/filebeat/Dockerfile
+++ b/bin/centralized-logging/filebeat/Dockerfile
@@ -1,5 +1,15 @@
 FROM docker.elastic.co/beats/filebeat:7.4.0
-COPY filebeat.yml /usr/share/filebeat/filebeat.yml
+
 USER root
+
+WORKDIR /usr/share/filebeat
+
+COPY ./buildfbcfg.sh .
+COPY ./filebeat.template.yml .
+
+RUN chmod -R 777 .
+
+CMD ["/bin/sh", "buildfbcfg.sh"]
+
 RUN chown root:filebeat /usr/share/filebeat/filebeat.yml
 USER filebeat
